apps/uncannydev-home/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temp-home-ingressroute
  namespace: uncannydev-home
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uncannydev.com`)
      kind: Rule
      services:
        - name: temp-home
          port: 80
